Test to solve the nav away form home problem
Pointing the system at some new test pages and instead of loading videos
let's just check the url constantly.

--- a/browser.cfg
+++ b/browser.cfg
@@ -1,6 +1,7 @@
 # Kiosk settings
 [browser]
-home_url: http://sciencebuzz.org/kiosks/american-indian/jim
+#home_url: http://sciencebuzz.org/kiosks/american-indian/jim
+home_url: http://projects.smm.org/test/selenium.html
 kiosk: False
 user_agent: "(SiteKiosk; science_buzz american_indian)"
 tests: test_am_ind
